# csgo_cfg_manager

./: .gitignore  CMakeLists.txt  README.md  csgo_cfg_manager.pro
header/: cfgmanager.h  mainwindow.h  windowsutils.h
header/exceptions/: csgo_cfg_runtime_exception.h  files_does_not_exist_exception.h  invalid_path_exception.h  reg_exception.h
header/external_library/: vdf_parser.hpp
source/: cfgmanager.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  windowsutils.cpp
source/utils/: Utils.cpp  Utils.h  utils.cpp  utils.h
